--- a/templates/verificationCode.html
+++ b/templates/verificationCode.html
@@ -38,7 +38,7 @@
                 </tr>
               </tbody>
             </table>
-            <p>Good luck! Codevo CEO.</p>
+            <p>Good luck! Smkwinner.</p>
           </td>
         </tr>
       </table>
